--- a/package.json
+++ b/package.json
@@ -6,13 +6,18 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "firebase": "^9.9.0",
+    "gh-pages": "^4.0.0",
     "react": "^18.2.0",
+    "react-date-picker": "^8.4.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
     "start": "react-scripts start",
+    "deploy": "gh-pages -b master -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -23,6 +28,7 @@
       "react-app/jest"
     ]
   },
+  "homepage": "https://myusername.github.io/my-app",
   "browserslist": {
     "production": [
       ">0.2%",
